WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294233
REGRESSION (
251714@main
): video element's webkitPresentationMode remains 'picture-in-picture' when returning from PiP to fullscreen on iOS
https://bugs.webkit.org/show_bug.cgi?id=294233
Summary
REGRESSION (251714@main): video element's webkitPresentationMode remains 'pic...
Andy Estes
Reported
2025-06-09 18:03:17 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2025-06-09 18:03:18 PDT
<
rdar://problem/151050209
>
Andy Estes
Comment 2
2025-06-09 18:13:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46523
EWS
Comment 3
2025-06-10 09:17:12 PDT
Committed
296041@main
(f720edf27076): <
https://commits.webkit.org/296041@main
> Reviewed commits have been landed. Closing PR #46523 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug